Add-NavbarAdminANDNavbarUser-AtRegisterAutoError

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-navbar></app-navbar>
+<app-navbar-admin *ngIf="islogInAdmin"></app-navbar-admin>
+<app-navbar-user *ngIf="isLoggedIn"></app-navbar-user>
+<app-navbar *ngIf="!isLoggedIn && !islogInAdmin"></app-navbar>
 <router-outlet></router-outlet>
