--- a/src/app/navbar/edit/edit-profile/edit-profile.component.css
+++ b/src/app/navbar/edit/edit-profile/edit-profile.component.css
@@ -1,29 +1,73 @@
-.navbar {
-    border-radius: 3px;
-    margin-bottom: 40px;
-    padding-bottom: 10px;
-    margin-top: 10px;
-  }
-  li{
-    margin: 5px;
-  }
-  /* CSS */
-  .profile-link {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    color: #333;
-    padding: 10px;
-  }
-  
-  .profile-image {
-    width: 20px; /* ปรับขนาดรูปโปรไฟล์ตามความต้องการ */
-    height: 20px;
-    border-radius: 50%;
-    margin-right: 10px;
-  }
-  
-  .profile-name {
-    font-weight: bold;
-  }
-  
+.container {
+  background-color: #f4f4f4;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
+
+.registration-form {
+  background-color: #fff;
+  padding: 5px;
+  border-radius: 8px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+
+}
+
+h2 {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.form-group {
+  margin-bottom: 5px;
+  display: inline;
+  justify-content: center;
+  align-items: center;
+}
+
+label {
+  font-weight: bold;
+}
+
+.btn-primary {
+  width: 100%;
+}
+#profilePicture{
+  display: flex;
+  justify-content: center;
+}
+
+.upload{
+  font-weight:bold;
+  color:#28a745;
+  margin-left: 15px;
+  line-height: 36px;
+}
+.img-thumbnail{
+  width: 25vh;
+  height: 25vh;
+}
+.imagesprofile{
+  display: inline;
+  justify-content: center;
+  align-items: center;
+}
+.profile-picture {
+  width: 200px; /* ปรับขนาดรูปภาพตามที่คุณต้องการ */
+  height: 200px; /* ปรับขนาดรูปภาพตามที่คุณต้องการ */
+  border: 2px solid #ccc; /* เพิ่มเส้นขอบสีเทา */
+  border-radius: 50%; /* ทำให้รูปภาพเป็นวงกลม */
+  object-fit: cover; /* ปรับขนาดรูปภาพให้ครอบคลุมพื้นที่ในกรอบ */
+}
+
+.registration-form {
+  padding: 20px;
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* ปรับขนาดปุ่ม Register ให้กว้างขึ้น */
+.btn-primary {
+  width: 100%;
+}
