--- a/src/app/posts/mypost/mypost/mypost.component.html
+++ b/src/app/posts/mypost/mypost/mypost.component.html
@@ -1,64 +1,57 @@
-<div class="block">
-  <div class="d-grid gap-2 d-md-flex mr-2 justify-content-md-end">
+<div class="container mb-3 mt-3 text-center">
+  <div class="d-grid gap-2 d-md-flex mb-3 mr-2 justify-content-md-end">
     <a [routerLink]="'/post'" class="btn btn-primary btn-custom mr-2" id="Aimages">
       <img src="/assets/more.png" width="25px" height="25px" alt="Image Alt Text" class="mr-1">
-      <h4 class="post mb-0">POST</h4>
-    </a>
-    <a class="btn btn-primary btn-custom mr-2" id="Aimages">
-      <img src="/assets/search.png" width="25px" height="25px" alt="Image Alt Text" class="mr-1">
-      <h4 class="search mb-0">SEARCH</h4>
+      <h6 class="post mb-0">POST</h6>
     </a>
   </div>
-</div>
 
-<!-- <div class="card g-1" >
-      <div class="row m-1">
-        <div class="col-md-4">
-          <img src="https://www.dohome.co.th/media/catalog/product/1/0/10022469_pun_1200_1_4.jpg" width="250" height="250" class="img-fluid rounded-start" alt="...">
-        </div>
-        <div class="col-md-8 d-flex align-items-center">
-          <div class="card-body" id="card-body">
-            <h1 class="card-title">ผู้โพส {{post.firstname}}</h1>
-            <p class="card-text">ประสบการณ์ {{ post.content }}</p>
-            <p class="card-text"><small class="text-body-secondary">วันที่ {{post.timestamp |  date:'yyyy-MM-dd' }}</small></p>
-          </div>
-        </div>
-      </div>
-    </div> -->
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col" style="width: 30%;">#</th>
-      <th scope="col" style="width: 40%;">Firstname</th>
-      <th scope="col" style="width: 20%;">Content</th>
-      <th scope="col">แก้ไข</th>
-      <th scope="col">ลบ</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let post of ShowPost; let i = index">
-      <th scope="row">{{ i + 1 }}</th>
-      <td>{{ post.firstname }}</td>
-      <td>{{ post.content }}</td>
-      <td>
-        <a [routerLink]="['/post', post.postid]" class="profile-link">
-          <img src="/assets/edit.png" alt="Profile Image" class="profile-image">
-          <span class="profile-name">{{ mypost }}</span>
-        </a>
-      </td>
-      <td>
-        <a class="profile-link">
-          <img
-            src="/assets/delete.png"
-            alt="Profile Image"
-            class="profile-image"
-            (click)="confirmDelete(post.postid)"
-          >
-          <span class="profile-name">{{ mypost }}</span>
-        </a>
-        
-      </td>
 
-    </tr>
-  </tbody>
-</table>
+  <div class="dox mb-10">
+    <table mat-table [dataSource]="post" class="mat-elevation-z10">
+      <ng-container matColumnDef="no">
+        <th mat-header-cell *matHeaderCellDef> No. </th>
+        <td mat-cell *matCellDef="let post; let i = index"> {{ i + 1 }} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="title">
+        <th mat-header-cell *matHeaderCellDef> title </th>
+        <td mat-cell *matCellDef="let post"> {{ post.title }} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="content">
+        <th mat-header-cell *matHeaderCellDef> content </th>
+        <td mat-cell *matCellDef="let post"> {{ post.content }} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="images">
+        <th mat-header-cell *matHeaderCellDef> images </th>
+        <td mat-cell *matCellDef="let post"> <img [src]="createImgPath(post.images)" alt="profile picture"
+            style="width:60px; height:60px;"> </td>
+      </ng-container>
+
+      <ng-container matColumnDef="postlocation">
+        <th mat-header-cell *matHeaderCellDef> postlocation </th>
+        <td mat-cell *matCellDef="let post"> {{ post.postlocation }} </td>
+      </ng-container>
+
+
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <td mat-cell *matCellDef="let post">
+          <a [routerLink]="['/post', post.postid]" class="profile-link">
+            <img src="/assets/edit.png" alt="Profile Image" class="profile-image">
+            <span class="profile-name">{{ mypost }}</span>
+          </a>
+          <a class="profile-link">
+            <img src="/assets/delete.png" alt="Profile Image" class="profile-image"
+              (click)="confirmDelete(post.postid)">
+            <span class="profile-name">{{ mypost }}</span>
+          </a>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let post; columns: displayedColumns;"></tr>
+    </table>
+  </div>
