--- a/src/app/admin/navbar-admin/navbar-admin.component.html
+++ b/src/app/admin/navbar-admin/navbar-admin.component.html
@@ -1,12 +1,13 @@
 <nav *ngIf="islogInAdmin">
     <nav class="navbar navbar-expand-lg bg-body-tertiary container-fluid ">
       <div class="container-fluid">
-        <a class="navbar-brand" [routerLink]="'home'">Camp Story</a>
+        <a class="navbar-brand" [routerLink]="'/'">Camp Story</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li><a [routerLink]="['/admin']" class="profile-link" >admin</a></li>
           </ul>
           <span class="navbar-text">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -17,7 +18,7 @@
                     </a>
                   </li>
                 <li>
-                  <a [routerLink]="['/Mypost']" class="profile-link">
+                  <a [routerLink]="['/Approvalstatus']" class="profile-link">
                     <img src="/assets/blog.png" alt="My Post" class="profile-image">
                     <span class="profile-name">approvalstatus</span>
                   </a>
