--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,28 +1,42 @@
-<div class="block">
-<div class="d-grid gap-2 d-md-flex mr-2 justify-content-md-end">
-  <a [routerLink]="'/post'" class="btn btn-primary btn-custom mr-2" id="Aimages">
-    <img src="/assets/more.png" width="25px" height="25px" alt="Image Alt Text" class="mr-1"> <h4 class="post mb-0">POST</h4>
-  </a>
-  <a  class="btn btn-primary btn-custom mr-2" id="Aimages">
-    <img src="/assets/search.png" width="25px" height="25px" alt="Image Alt Text" class="mr-1"> <h4 class="search mb-0">SEARCH</h4>
-  </a>
-</div>
+<div class="input-group small-search-bar">
+  <input [(ngModel)]="searchTerm" (keyup)="search()" type="text" class="form-control form-control-sm" placeholder="Search...">
+  <!-- <div class="input-group-append">
+    <button class="btn btn-outline-secondary btn-sm" type="button" (click)="search()">Search</button>
+  </div> -->
 </div>
 
-<div class="card mb-3 mx-auto" style="max-width: 540px;"*ngFor="let post of ShowPost">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="" class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h1 class="card-title">{{ post.firstname }}</h1>
-        <p class="card-text">{{ post.content }}</p>
-        <p class="card-text"><small class="text-body-secondary">{{ post.timestamp | date:'yyyy-MM-dd' }}</small></p>
-      </div>
+
+
+
+
+<div class="container text-center mb-3">
+  <div class="row">
+    <div class="col-md-6" id="cardto" *ngFor="let post of filteredPosts">
+      <a [routerLink]="['/PostDetail', post.postid]" class="zoom-on-hover">
+        <div class="post-container">
+          <div class="post-header">
+            <div class="post-header-details">
+              <h1>{{ post.firstname }}</h1>
+            </div>
+          </div>
+          <img [src]="createImgPath(post.images)" width="200px" height="200px" class="images-content">
+          <div class="post-content">
+            <h3>{{ post.title }}</h3>
+            <div class="location-container">
+              <img src="/assets/location-pin.png" width="15px" height="15px" class="location-icon">
+              <h5 class="location-text">{{ post.postlocation }}</h5>
+            </div>
+            <div class="calendar-container">
+              <img src="/assets/calendar.png" width="15px" height="15px" class="calendar-icon">
+              <h6 class="calendar-text">{{ post.timestamp | date:'dd/MM/yyyy HH:mm' }}</h6>
+            </div>
+          </div>
+        </div>
+      </a>
     </div>
   </div>
 </div>
 
-
-<app-footer></app-footer>
+<div class="container text-center not-found" *ngIf="filteredPosts.length === 0">
+  <p>Not Found</p>
+</div>
