--- a/src/app/navbar-user/navbar-user.component.html
+++ b/src/app/navbar-user/navbar-user.component.html
@@ -1,7 +1,7 @@
 <nav *ngIf="isLoggedIn; else noNav">
     <nav class="navbar navbar-expand-lg bg-body-tertiary container-fluid ">
       <div class="container-fluid">
-        <a class="navbar-brand" [routerLink]="'home'">Camp Story</a>
+        <a class="navbar-brand" [routerLink]="'/home'">Camp Story</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -17,10 +17,10 @@
                   </a>
                 </li>
                 <li>
-                  <a [routerLink]="['/edit', sesStr]" class="profile-link">
-                    <img src="/assets/user.png" alt="Profile Image" class="profile-image">
+                  <a [routerLink]="['/edit', userid]" class="profile-link">
+                    <img [src]="urlimages+images" alt="Profile Image" class="profile-image">
                     <span class="profile-name">{{ sesStr }}</span>
-                  </a>
+                  </a>                  
                 </li> 
                 <li>
                   <button class="btn btn-outline-primary my-2 my-sm-0" (click)="logout()">Logout</button>
