--- a/src/app/navbar/edit/edit-profile/edit-profile.component.html
+++ b/src/app/navbar/edit/edit-profile/edit-profile.component.html
@@ -1,28 +1,23 @@
 <div class="container">
-  <div class="row justify-content-center align-items-center" style="min-height: 50vh;">
+  <div class="row justify-content-center align-items-center m-2" style="min-height: 80vh;">
     <div class="col-md-6">
       <div class="registration-form">
         <h2>Registration Form</h2>
-        <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
+        <form method="post" enctype="multipart/form-data" [formGroup]="registrationForm" (ngSubmit)="editUser()">
           <div class="form-group">
             <label for="username">Username:</label>
             <input type="text" id="username" formControlName="username" class="form-control">
-            <!-- Add validation messages if needed -->
           </div>
 
           <div class="form-group">
             <label for="password">Password:</label>
             <input type="password" id="password" formControlName="password" class="form-control">
-            <!-- Add validation messages if needed -->
           </div>
 
           <div class="form-group">
             <label for="email">Email:</label>
             <input type="email" id="email" formControlName="email" class="form-control">
-            <!-- Add validation messages if needed -->
           </div>
-
-          <!-- Optional: Add form controls for firstName, lastName, phoneNumber, and dateOfBirth -->
           <div class="form-group">
             <label for="firstName">First Name:</label>
             <input type="text" id="firstName" formControlName="firstname" class="form-control">
@@ -42,8 +37,16 @@
             <label for="dateofbirth">Date of Birth:</label>
             <input type="date" id="dateofbirth" formControlName="dateofbirth" class="form-control">
           </div>
-          <button type="submit" class="btn btn-primary">Register</button>
+
+          <button type="submit" class="btn btn-primary mt-3">Register</button>
         </form>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="text-center">
+        <img [src]="imageUrl" class="profile-picture mt-3" *ngIf="imageUrl">
+        <app-upload id="profilePicture" (onUploadFinished)="onUploadFinished($event) " 
+          (imageUrlChanged)="updateImageUrl($event) "   [buttonText]="'รูป'"></app-upload>
       </div>
     </div>
   </div>
