--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,29 +1,28 @@
 <div class="container">
-  <div class="row justify-content-center align-items-center" style="min-height: 50vh;">
-    <div class="col-md-6">
+  <div class="row justify-content-center align-items-center m-1" style="min-height: 80vh;">
+    <h2 class="headResgites">Registration Form</h2>
+    <div class="col-md-4">
       <div class="registration-form">
-        <h2>Registration Form</h2>
-        <form  method="post"  EncType="multipart/form-data" [formGroup]="registrationForms" (ngSubmit)="onSubmit()">
+        <!-- <form method="post" enctype="multipart/form-data" [formGroup]="registrationForms" (ngSubmit)="onSubmit()">
           <div class="form-group">
             <label for="username">Username:</label>
-            <input type="text" id="username" formControlName="username" class="form-control">
-            <!-- Add validation messages if needed -->
+            <input type="text" id="username" formControlName="username" class="form-control" required>
+            <div *ngIf="registrationForms.get('username')?.hasError('required') && registrationForms.get('username')?.touched" class="text-danger">
+              Username is required.
+            </div>
           </div>
-
           <div class="form-group">
             <label for="password">Password:</label>
-            <input type="password" id="password" formControlName="password" class="form-control">
-            <!-- Add validation messages if needed -->
+            <input type="password" id="password" formControlName="password" class="form-control" required>
+            <div *ngIf="registrationForms.get('password')?.hasError('required') && registrationForms.get('password').touched" class="text-danger">
+              Password is required.
+            </div>
           </div>
 
           <div class="form-group">
             <label for="email">Email:</label>
             <input type="email" id="email" formControlName="email" class="form-control">
-            <!-- Add validation messages if needed -->
           </div>
-          <!-- <INPUT id="avatar" type="file" formControlName="avatar">
-            <input type="file" class="file-input" #fileUpload> -->
-          <!-- Optional: Add form controls for firstName, lastName, phoneNumber, and dateOfBirth -->
           <div class="form-group">
             <label for="firstName">First Name:</label>
             <input type="text" id="firstName" formControlName="firstname" class="form-control">
@@ -43,8 +42,77 @@
             <label for="dateofbirth">Date of Birth:</label>
             <input type="date" id="dateofbirth" formControlName="dateofbirth" class="form-control">
           </div>
-          <button type="submit" class="btn btn-primary">Register</button>
+
+          <button type="submit" class="btn btn-primary mt-3">Register</button>
+        </form> -->
+      
+        <form  [formGroup]="registrationForms" (ngSubmit)="onSubmit()">
+          <div class="form-group">
+            <label for="username">Username:</label>
+            <input type="text" id="username" formControlName="username" class="form-control" required>
+            <div *ngIf="registrationForms.get('username')?.hasError('required') && registrationForms.get('username')?.touched && registrationForms.get('username')?.dirty" class="text-danger">
+              Username 4 ขั้นต่ำ.
+            </div>
+          </div>
+        
+          <div class="form-group">
+            <label for="password">Password:</label>
+            <input type="password" id="password" formControlName="password" class="form-control" required>
+            <div *ngIf="registrationForms.get('password')?.hasError('required') && registrationForms.get('password')?.touched && registrationForms.get('password')?.dirty" class="text-danger">
+              Password is required.
+            </div>
+          </div>
+        
+          <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" id="email" formControlName="email" class="form-control" required>
+            <div *ngIf="registrationForms.get('email')?.hasError('required') && registrationForms.get('email')?.touched && registrationForms.get('email')?.dirty" class="text-danger">
+              Email is required.
+            </div>
+          </div>
+        
+          <div class="form-group">
+            <label for="firstName">First Name:</label>
+            <input type="text" id="firstName" formControlName="firstname" class="form-control" required>
+            <div *ngIf="registrationForms.get('firstname')?.hasError('required') && registrationForms.get('firstname')?.touched && registrationForms.get('firstname')?.dirty" class="text-danger">
+              First Name is required.
+            </div>
+          </div>
+        
+          <div class="form-group">
+            <label for="lastName">Last Name:</label>
+            <input type="text" id="lastName" formControlName="lastname" class="form-control" required>
+            <div *ngIf="registrationForms.get('lastname')?.hasError('required') && registrationForms.get('lastname')?.touched && registrationForms.get('lastname')?.dirty" class="text-danger">
+              Last Name is required.
+            </div>
+          </div>
+        
+          <div class="form-group">
+            <label for="phoneNumber">Phone Number:</label>
+            <input type="text" id="phoneNumber" formControlName="phonenumber" class="form-control" required>
+            <div *ngIf="registrationForms.get('phonenumber')?.hasError('required') && registrationForms.get('phonenumber')?.touched && registrationForms.get('phonenumber')?.dirty" class="text-danger">
+              Phone Number is required.
+            </div>
+          </div>
+        
+          <div class="form-group">
+            <label for="dateofbirth">Date of Birth:</label>
+            <input type="date" id="dateofbirth" formControlName="dateofbirth" class="form-control" required>
+            <div *ngIf="registrationForms.get('dateofbirth')?.hasError('required') && registrationForms.get('dateofbirth')?.touched && registrationForms.get('dateofbirth')?.dirty" class="text-danger">
+              Date of Birth is required.
+            </div>
+          </div>
+        
+          <button type="submit" class="btn btn-primary mt-3">Register</button>
         </form>
+        
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="text-center">
+        <img [src]="imageUrl" class="profile-picture mt-3" *ngIf="imageUrl">
+        <app-upload id="profilePicture" (onUploadFinished)="onUploadFinished($event) " 
+          (imageUrlChanged)="updateImageUrl($event) "   [buttonText]="'รูป'"></app-upload>
       </div>
     </div>
   </div>
