--- a/src/styles.css
+++ b/src/styles.css
@@ -2,5 +2,12 @@
 body{
     background-color: rgb(4, 66, 10);
 }
+html, body {
+    height: 100%;
+    box-sizing: border-box;
+    margin: 0;
+}
+/* body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
