--- a/src/app/admin/navbar-admin/navbar-admin.component.html
+++ b/src/app/admin/navbar-admin/navbar-admin.component.html
@@ -1,4 +1,4 @@
-<nav *ngIf="islogInAdmin">
+<nav *ngIf="islogInAdmin; else noNav">
     <nav class="navbar navbar-expand-lg bg-body-tertiary container-fluid ">
       <div class="container-fluid">
         <a class="navbar-brand" [routerLink]="'/'">Camp Story</a>
@@ -24,7 +24,7 @@
                   </a>
                 </li>
                 <li>
-                  <a [routerLink]="['/edit', sesStr]" class="profile-link">
+                  <a [routerLink]="['/edit', userid]" class="profile-link">
                     <img src="/assets/user.png" alt="Profile Image" class="profile-image">
                     <span class="profile-name">{{ sesStr }}</span>
                   </a>
@@ -38,3 +38,28 @@
       </div> 
     </nav>
   </nav>
+  <ng-template #noNav>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary container-fluid ">
+      <div class="container-fluid">
+        <a class="navbar-brand" [routerLink]="'/'">Camp Story</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          </ul>
+          <span class="navbar-text">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li>
+                      <button class="btn btn-outline-primary my-2 my-sm-0" [routerLink]="'form'">Login</button>
+                  </li>
+                  <li>
+                      <button class="btn btn-primary my-2 my-sm-0" [routerLink]="'register'">Sign Up</button>
+                  </li>
+              </ul>
+          </span>
+        </div>
+      </div> 
+    </nav>
+  </ng-template> 
+
