--- a/src/app/navbar/edit/edit-profile/edit-profile.component.html
+++ b/src/app/navbar/edit/edit-profile/edit-profile.component.html
@@ -1,53 +1,65 @@
 <div class="container">
   <div class="row justify-content-center align-items-center m-2" style="min-height: 80vh;">
     <div class="col-md-6">
-      <div class="registration-form">
-        <h2>Registration Form</h2>
-        <form method="post" enctype="multipart/form-data" [formGroup]="registrationForm" (ngSubmit)="editUser()">
-          <div class="form-group">
-            <label for="username">Username:</label>
-            <input type="text" id="username" formControlName="username" class="form-control">
-          </div>
+      <mat-card class="registration-card">
+        <mat-card-header>
+          <mat-card-title>Edit Profile Form</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <form method="post" enctype="multipart/form-data" [formGroup]="registrationForm" (ngSubmit)="editUser()">
+            <mat-form-field class="full-width">
+              <mat-label>Username</mat-label>
+              <input matInput type="text" id="username" formControlName="username">
+            </mat-form-field>
 
-          <div class="form-group">
-            <label for="password">Password:</label>
-            <input type="password" id="password" formControlName="password" class="form-control">
-          </div>
-
-          <div class="form-group">
-            <label for="email">Email:</label>
-            <input type="email" id="email" formControlName="email" class="form-control">
-          </div>
-          <div class="form-group">
-            <label for="firstName">First Name:</label>
-            <input type="text" id="firstName" formControlName="firstname" class="form-control">
-          </div>
-
-          <div class="form-group">
-            <label for="lastName">Last Name:</label>
-            <input type="text" id="lastName" formControlName="lastname" class="form-control">
-          </div>
-
-          <div class="form-group">
-            <label for="phoneNumber">Phone Number:</label>
-            <input type="text" id="phoneNumber" formControlName="phonenumber" class="form-control">
-          </div>
-
-          <div class="form-group">
-            <label for="dateofbirth">Date of Birth:</label>
-            <input type="date" id="dateofbirth" formControlName="dateofbirth" class="form-control">
-          </div>
-
-          <button type="submit" class="btn btn-primary mt-3">Register</button>
-        </form>
-      </div>
+            <mat-form-field class="full-width">
+              <mat-label>Password</mat-label>
+              <input matInput type="password" id="password" formControlName="password">
+            </mat-form-field>
+            
+            <mat-form-field class="full-width">
+              <mat-label>Email</mat-label>
+              <input matInput type="email" id="email" formControlName="email">
+            </mat-form-field>
+            
+            <mat-form-field class="full-width">
+              <mat-label>First Name</mat-label>
+              <input matInput type="text" id="firstName" formControlName="firstname">
+            </mat-form-field>
+            
+            <mat-form-field class="full-width">
+              <mat-label>Last Name</mat-label>
+              <input matInput type="text" id="lastName" formControlName="lastname">
+            </mat-form-field>
+            
+            <mat-form-field class="full-width">
+              <mat-label>Phone Number</mat-label>
+              <input matInput type="text" id="phoneNumber" formControlName="phonenumber">
+            </mat-form-field>
+            
+            <mat-form-field class="full-width">
+              <mat-label>Date of Birth</mat-label>
+              <input matInput type="date" id="dateofbirth" formControlName="dateofbirth">
+            </mat-form-field>
+            
+            <button mat-raised-button color="primary" type="submit" class="mt-3">Save Changes</button>
+          </form>
+        </mat-card-content>
+      </mat-card>
     </div>
     <div class="col-md-6">
-      <div class="text-center">
-        <img [src]="imageUrl" class="profile-picture mt-3" *ngIf="imageUrl">
-        <app-upload id="profilePicture" (onUploadFinished)="onUploadFinished($event) " 
-          (imageUrlChanged)="updateImageUrl($event) "   [buttonText]="'รูป'"></app-upload>
-      </div>
+      <mat-card class="profile-card">
+        <mat-card-header>
+          <mat-card-title>Profile Picture</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <div class="text-center">
+            <img [src]="imageUrl" class="profile-picture mt-3" *ngIf="imageUrl">
+            <app-upload id="profilePicture" (onUploadFinished)="onUploadFinished($event)"
+              (imageUrlChanged)="updateImageUrl($event)" [buttonText]="'รูป'"></app-upload>
+          </div>
+        </mat-card-content>
+      </mat-card>
     </div>
   </div>
 </div>
