--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,71 +1,37 @@
-<div class="container text-center">
+<div class="container d-inline align-items-center justify-content-center text-center h-100vh">
+  <div class="d-inline align-items-center justify-content-center" style="min-height: 100vh;">
     <div class="row row-cols-2">
-        <div class="col">
-            <div class="small-box bg-gradient-success">
-                <div class="inner">
-                    <h1>{{users.length}}</h1>
-                    <p>User Registrations</p>
-                </div>
-                <div class="icon">
-                    <i class="fa-solid fa-user-plus">user</i>
-                </div>
-                <a class="small-box-footer">
-                    More info <i class="fas fa-arrow-circle-right"></i>
-                </a>
-            </div>
+      <div class="col">
+        <div class="small-box bg-gradient-success">
+          <div class="inner">
+            <h1>{{users.length}}</h1>
+            <p>User Registrations</p>
+          </div>
+          <div class="icon">
+            <i style="font-size:110px" class="fa">&#xf007;</i>
+          </div>
+          <a class="small-box-footer" [routerLink]="'/viewUser'">
+            More info <i class="fas fa-arrow-circle-right"></i>
+          </a>
         </div>
-        <div class="col">
-            <div class="small-box bg-info">
-                <div class="inner">
-                    <h1>{{ShowPost.length}}</h1>
-                    <p>post</p>
-                </div>
-                <div class="icon">
-                    <i class="fas fa-shopping-cart">post</i>
-                </div>
-                <a  class="small-box-footer">
-                    More info <i class="fas fa-arrow-circle-right"></i>
-                </a>
-            </div>
+        <app-user></app-user>
+      </div>
+      <div class="col">
+        <div class="small-box bg-info">
+          <div class="inner">
+            <h1>{{ShowPost.length}}</h1>
+            <p>post</p>
+          </div>
+          <div class="icon">
+            <i style="font-size:110px" class="fa">&#xf055;</i>
+          </div>
+          <a class="small-box-footer" [routerLink]="'/viewPost'">
+            More info <i class="fas fa-arrow-circle-right"></i>
+          </a>
         </div>
-        <div class="col">Column</div>
-        <div class="col">Column</div>
-    </div>
-</div>
-<!-- Main node for this component -->
-<div class="timeline">
-    <!-- Timeline time label -->
-    <div class="time-label">
-      <span class="bg-green">23 Aug. 2019</span>
-    </div>
-    <div>
-    <!-- Before each timeline item corresponds to one icon on the left scale -->
-      <i class="fas fa-envelope bg-blue"></i>
-      <!-- Timeline item -->
-      <div class="timeline-item">
-      <!-- Time -->
-        <span class="time"><i class="fas fa-clock"></i> 12:05</span>
-        <!-- Header. Optional -->
-        <h3 class="timeline-header"><a href="#">Support Team</a> sent you an email</h3>
-        <!-- Body -->
-        <div class="timeline-body">
-          Etsy doostang zoodles disqus groupon greplin oooj voxy zoodles,
-          weebly ning heekya handango imeem plugg dopplr jibjab, movity
-          jajah plickers sifteo edmodo ifttt zimbra. Babblely odeo kaboodle
-          quora plaxo ideeli hulu weebly balihoo...
-        </div>
-        <!-- Placement of additional controls. Optional -->
-        <div class="timeline-footer">
-          <a class="btn btn-primary btn-sm">Read more</a>
-          <a class="btn btn-danger btn-sm">Delete</a>
-        </div>
+        <View-Post></View-Post>
       </div>
     </div>
-    <!-- The last icon means the story is complete -->
-    <div>
-      <i class="fas fa-clock bg-gray"></i>
-    </div>
   </div>
-  <div class="timeline timeline-inverse">
-    <!-- ... Item ... -->
-  </div>
+</div>
+
