--- a/src/app/admin/approvalstatus/approvalstatus/approvalstatus.component.html
+++ b/src/app/admin/approvalstatus/approvalstatus/approvalstatus.component.html
@@ -1,4 +1,6 @@
-<table mat-table [dataSource]="ShowPost" class="mat-elevation-z8">
+<div class="container-box">
+<table mat-table *ngIf="ShowPost && ShowPost.length > 0" [dataSource]="ShowPost"
+  class="mat-elevation-z8 my-custom-table">
   <ng-container matColumnDef="no">
     <th mat-header-cell *matHeaderCellDef> No. </th>
     <td mat-cell *matCellDef="let post; let i = index"> {{ i + 1 }} </td>
@@ -6,10 +8,10 @@
 
   <ng-container matColumnDef="title">
     <th mat-header-cell *matHeaderCellDef> title </th>
-      
-    <td mat-cell *matCellDef="let post">  
+
+    <td mat-cell *matCellDef="let post">
       <a [routerLink]="['/PostDetail', post.postid]">
-        {{ post.title }} 
+        {{ post.title }}
       </a>
     </td>
   </ng-container>
@@ -43,3 +45,8 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+</div>
+
+<div *ngIf="!ShowPost || ShowPost.length === 0" class="no-posts-message">
+  ไม่มีการโพสที่ต้องอนุมัติ
+</div>
