--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,18 +3,18 @@
      <div class="row justify-content-center mb-0 pt-5 pb-0 row-2 px-3">
          <div class="col-12">
               <div class="row row-2">
-                  <div class="col-sm-3 text-md-center"><h5><span> <i class="fa fa-firefox text-light" aria-hidden="true"></i></span><b>  Stride</b></h5></div>
-                  <div class="col-sm-3  my-sm-0 mt-5"><ul class="list-unstyled"><li class="mt-0">Platform</li><li>Help Center</li><li>Security</li></ul></div>
-                  <div class="col-sm-3  my-sm-0 mt-5"><ul class="list-unstyled"><li class="mt-0">Customers</li><li>Use Cases</li><li>Customers Services</li></ul></div>
-                  <div class="col-sm-3  my-sm-0 mt-5"><ul class="list-unstyled"><li class="mt-0">Company</li><li>About</li><li>Careers- <span class="Careers">We're-hiring</span></li></ul></div>
+                <div class="col-sm-3  my-sm-0 mt-5"><ul class="list-unstyled"><li class="mt-0">About</li><li>222 หมู่2 ต.บ้านพร้าว</li><li>อ.ป่าพะยอม จ.พัทลุง</li></ul></div>
+                  <div class="col-sm-3  my-sm-0 mt-5"><ul class="list-unstyled"><li class="mt-0">จิราพันธ์  รัตนผล</li><li>เลิศพิสิฐ  ปูปาน</li><li>อับดุลอาซิม  บินหะยียะโกบ</li></ul></div>
+                  <div class="col-sm-3  my-sm-0 mt-5"><ul class="list-unstyled"><li class="mt-0"></li><li>พัฒนาโดยนิสิตหลักสูตรวิทยาการคอมพิวเตอร์</li><li></li></ul></div>
+                  <div class="col-sm-3  my-sm-0 mt-5"><ul class="list-unstyled"><li class="mt-0">สาขาคอมพิวเตอร์และเทคโนโลยีสารสนเทศ</li><li>คณะวิทยาศาสตร์และนวัฒกรรมดิจิทัล</li><li>มหาวิทยาลัยทักษิณ</li></ul></div>
               </div>  
          </div>
      </div>
      <div class="row justify-content-center mt-0 pt-0 row-1 mb-0  px-sm-3 px-2">
           <div class="col-12">
               <div class="row my-4 row-1 no-gutters">
-                  <div class="col-sm-3 col-auto text-center"><small>&#9400; Stride Softwere</small></div><div class="col-md-3 col-auto "></div><div class="col-md-3 col-auto"></div>
-                  <div class="col  my-auto text-md-left  text-right "> <small> hello@getstride.com <span><img src="https://i.imgur.com/TtB6MDc.png" class="img-fluid "  width="25"></span> <span><img src="https://i.imgur.com/N90KDYM.png" class="img-fluid "  width="25"></span></small>  </div> 
+                  <div class="col-sm-3 col-auto text-center"><small>&#9400; snm Softwere</small></div><div class="col-md-3 col-auto "></div><div class="col-md-3 col-auto"></div>
+                  <div class="col  my-auto text-md-left  text-right "> <small> snm-Softwere@getstride.com <span><img src="https://i.imgur.com/TtB6MDc.png" class="img-fluid "  width="25"></span> <span><img src="https://i.imgur.com/N90KDYM.png" class="img-fluid "  width="25"></span></small>  </div> 
               </div>
           </div>
       </div>
