--- a/src/app/navbar-user/navbar-user.component.html
+++ b/src/app/navbar-user/navbar-user.component.html
@@ -1,5 +1,5 @@
-<nav *ngIf="isLoggedIn; else noNav">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary container-fluid ">
+<nav *ngIf="isLoggedIn">
+    <nav class="navbar navbar-expand-lg  container-fluid ">
       <div class="container-fluid">
         <a class="navbar-brand" [routerLink]="'/home'">Camp Story</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,30 +31,7 @@
       </div> 
     </nav>
   </nav>
-  <ng-template #noNav>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary container-fluid ">
-      <div class="container-fluid">
-        <a class="navbar-brand" [routerLink]="'/'">Camp Story</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          </ul>
-          <span class="navbar-text">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li>
-                      <button class="btn btn-outline-primary my-2 my-sm-0" [routerLink]="'form'">Login</button>
-                  </li>
-                  <li>
-                      <button class="btn btn-primary my-2 my-sm-0" [routerLink]="'register'">Sign Up</button>
-                  </li>
-              </ul>
-          </span>
-        </div>
-      </div> 
-    </nav>
-  </ng-template>
+
   
   
   
