--- a/src/app/navbar/edit/edit-profile/edit-profile.component.html
+++ b/src/app/navbar/edit/edit-profile/edit-profile.component.html
@@ -16,32 +16,32 @@
               <mat-label>Password</mat-label>
               <input matInput type="password" id="password" formControlName="password">
             </mat-form-field>
-            
+
             <mat-form-field class="full-width">
               <mat-label>Email</mat-label>
               <input matInput type="email" id="email" formControlName="email">
             </mat-form-field>
-            
+
             <mat-form-field class="full-width">
               <mat-label>First Name</mat-label>
               <input matInput type="text" id="firstName" formControlName="firstname">
             </mat-form-field>
-            
+
             <mat-form-field class="full-width">
               <mat-label>Last Name</mat-label>
               <input matInput type="text" id="lastName" formControlName="lastname">
             </mat-form-field>
-            
+
             <mat-form-field class="full-width">
               <mat-label>Phone Number</mat-label>
               <input matInput type="text" id="phoneNumber" formControlName="phonenumber">
             </mat-form-field>
-            
+
             <mat-form-field class="full-width">
               <mat-label>Date of Birth</mat-label>
               <input matInput type="date" id="dateofbirth" formControlName="dateofbirth">
             </mat-form-field>
-            
+
             <button mat-raised-button color="primary" type="submit" class="mt-3">Save Changes</button>
           </form>
         </mat-card-content>
@@ -54,9 +54,12 @@
         </mat-card-header>
         <mat-card-content>
           <div class="text-center">
-            <img [src]="imageUrl" class="profile-picture mt-3" *ngIf="imageUrl">
+            <img [src]="createImgPath(edit.images)" width="350px" height="350px" class="images-content"
+              *ngIf="!imageUploaded">
+            <img [src]="imageUrl" width="350px" height="350px" class="profile-picture mt-3" *ngIf="imageUrl">
             <app-upload id="profilePicture" (onUploadFinished)="onUploadFinished($event)"
               (imageUrlChanged)="updateImageUrl($event)" [buttonText]="'รูป'"></app-upload>
+
           </div>
         </mat-card-content>
       </mat-card>
