--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -3,9 +3,11 @@
   margin-bottom: 40px;
   padding-bottom: 10px;
 }
-li{
+
+li {
   margin: 5px;
 }
+
 /* CSS */
 .profile-link {
   display: flex;
@@ -16,7 +18,8 @@ li{
 }
 
 .profile-image {
-  width: 20px; /* ปรับขนาดรูปโปรไฟล์ตามความต้องการ */
+  width: 20px;
+  /* ปรับขนาดรูปโปรไฟล์ตามความต้องการ */
   height: 20px;
   border-radius: 50%;
   margin-right: 10px;
@@ -24,4 +27,37 @@ li{
 
 .profile-name {
   font-weight: bold;
+}
+
+.navbar {
+  background-color: #667a43;
+}
+
+.navbar-brand {
+  font-family: 'Pacifico', cursive;
+  font-size: 40px;
+}
+
+.custom-btn {
+  background-color: #BC6C25;
+  color: #fff;
+}
+
+.custom-btn:hover {
+  background-color: #FFA500;
+  /* Change to a different color when hovering */
+  box-shadow: #b17300;
+  /* Add a subtle shadow on hover */
+}
+
+.customr-btn {
+  background-color: #000000;
+  color: #fff;
+}
+
+.customr-btn:hover {
+  background-color: #006aff;
+  /* Change to a different color when hovering */
+  box-shadow: #b17300;
+  /* Add a subtle shadow on hover */
 }
