--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary container-fluid ">
+<nav class="navbar navbar-expand-lg container-fluid ">
     <div class="container-fluid">
       <a class="navbar-brand" [routerLink]="'/home'">Camp Story</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,11 +10,11 @@
         <span class="navbar-text">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li>
-                    <button class="btn btn-outline-primary my-2 my-sm-0" [routerLink]="'/form'">Login</button>
+                    <button class="btn customr-btn my-2 my-sm-0" [routerLink]="'/form'">Login</button>
                 </li>
-                <li>
-                    <button class="btn btn-primary my-2 my-sm-0" [routerLink]="'/register'">Sign Up</button>
-                </li>
+                <li> 
+                  <button class="btn my-2 my-sm-0 custom-btn" [routerLink]="'/register'">Sign Up</button>
+              </li>
             </ul>
         </span>
       </div>
