--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    background-color: rgb(4, 66, 10);
+    background-color: #D4D7C4;
 }
 
 html,
